# Rubrica-GUI

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  contatto.cpp  contatto.hpp  list.cpp  list.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  utils.cpp  utils.hpp
docs/: _c_1_2_users_2matti_2_one_drive_01-_01_i_8_i_8_s_8_01_bassi-_burgatti_2anno_01scolastico_012024_582e04e13b878686b7d04dd6b8f5531f.html  annotated.html  annotated_dup.js  class_contact-members.html  class_contact.html  class_contact.js  class_contact_list-members.html  class_contact_list.html  class_contact_list.js  class_main_window-members.html  class_main_window.html  class_main_window.js  classes.html  contatto_8cpp.html  contatto_8hpp.html  contatto_8hpp.js  contatto_8hpp_source.html  doxygen_crawl.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  header.html  hierarchy.html  hierarchy.js  index.html  index.js  list_8cpp.html  list_8cpp.js  list_8hpp.html  list_8hpp.js  list_8hpp_source.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  (+14 more)
docs/html/: _desktop___qt__6__8__1___min_g_w__64__bit-_debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__8__1___min_g_w__64__bit-_debug_2_rubrica_g_u_i__autogen_2_e_w_i_e_g_a46_w_w_2moc__list_8cpp.html  _desktop___qt__6__8__1___min_g_w__64__bit-_debug_2_rubrica_g_u_i__autogen_2_e_w_i_e_g_a46_w_w_2moc__list_8cpp_8d.html  (+271 more)
docs/search/: all_0.js  all_1.js  all_2.js  (+35 more)
(+64 files in other folders)
